<resources>
    <string name="app_name" translatable="false">The Movie Db</string>
    <string name="s_movies" translatable="false">Фильмы</string>
    <string name="s_genres" translatable="false">Жанры</string>
    <string name="s_popular" translatable="false">Популярные</string>
    <string name="s_soon" translatable="false">Скоро на экранах</string>
    <string name="s_movie_poster" translatable="false">Постер фильма</string>
    <string name="s_there_are_no_elements" translatable="false">Найдено ничего</string>
    <string name="s_on_failure_message" translatable="false">Произошла ошибка на сервере</string>
    <string name="string_internet_connection_warning" translatable="false">Интернет не подключен</string>
    <string name="s_search">Искать</string>
    <string name="s_search_movies">Искать фильм</string>
    <string name="s_no_overview">Нет описания к фильму</string>
    <string name="s_no_credits">Не было найдено ни одного актера</string>
    <string name="s_credits">Актеры</string>
    <string name="s_overview">Краткое описание</string>
    <string name="s_similar_movies">Похожие фильмы</string>
    <string name="s_filter">Фильтровать</string>
    <string name="s_something_went_wrong">Что-то пошло не так…</string>
    <string name="s_year_start">Год выпуска от</string>
    <string name="s_year_end">Год выпуска до</string>
    <string name="s_choose_genre">Выберите жанр</string>
</resources>
